Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                         <div class="text">从专业知识出发，我熟练使用Java、C++、Python等编程语言及其通用框架和库（例如QT、OpenGL、SSM、Pytorch等），本科、硕士期间各门专业课成绩名列前茅，曾荣获国家奖学金。<strong>（0.2%）</strong> </div>
                                         <div class="text">从竞赛出发，我曾参与并主持国家级大学生创新创业项目、全国大学生计算机设计大赛、全国研究生华为杯数学建模竞赛、泰迪杯数据挖掘挑战赛等竞赛，并凭借设计的项目获得了<strong>国家级</strong>的奖项。 </div>
                                         <div class="text">从科研项目出发，我有丰富的科研经验，以<strong>学生一作</strong>发表CCF-A类会议ACM SIGCHI论文，以一作发表SCI期刊和国际会议论文，多次参加国内国际学术会议和学术交流。</div>
-                                        <div class="text">从后端项目出发，我做过在线教育论坛项目和简易抖音项目，从中学习到Go、Gin、Gorm、Java、SpringBoot、MyBatis、MySQL、Redis、Kafka等技术栈，目前在一家公司担任后端开发。</div>
+                                        <div class="text">从后端项目出发，我做过在线教育论坛项目和简易抖音项目，从中学习到Go、Gin、Gorm、Java、SpringBoot、MyBatis、MySQL、Redis、Kafka等技术栈，目前在一家公司担任后端开发。项目均在<a href="https://github.com/0g-m0">GitHub</a>开源。</div>
                                         <div class="text">欢迎查看我的<a href="document/resume_graduate.pdf">简历</a></div>
                                     </div>
                                 </div>
